[package]
name = "jiggle"
version = "1.0.0"
authors = ["Jacob Shaffer <jpshaffer5481@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inputbot = "0.4"
rand = "0.7"

[profile.release]
#opt-level = 3
opt-level = 's'
debug = true
#rpath = false
lto = true
#debug-assertions = false
codegen-units = 1
panic = 'abort'
#incremental = false
#overflow-checks = false
